# Quake3x

./: BUILD.md  CMakeLists.txt  Makefile  README.md  make-macosx-app.sh  make-macosx-ub2.sh
.github/workflows/: build.yml
code/botlib/: be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_entity.c  be_aas_entity.h  be_aas_move.c  be_aas_reach.c  be_aas_route.c  be_aas_sample.c  be_aas_sample.h  be_ai_chat.c  be_ai_goal.c  be_ai_move.c  be_ai_weight.c  be_interface.c  l_crc.c  l_crc.h  l_libvar.c  l_libvar.h  l_log.c  l_log.h  l_precomp.c  l_precomp.h  l_script.c  l_script.h
code/cgame/: cg_public.h
code/client/: cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  snd_codec.c  snd_dma.c  snd_main.c  snd_mem.c  snd_mix.c
code/game/: bg_public.h
code/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  keys.c  net_chan.c  net_ip.c  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  unzip.c  vm.c  vm_aarch64.c  vm_armv7l.c  vm_interpreted.c  vm_local.h  vm_x86.c
code/renderer/: tr_animation.c  tr_arb.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_vbo.c
code/renderer2/: tr_backend.c  tr_bsp.c  tr_fbo.c  tr_glsl.c  tr_local.h  tr_main.c  tr_shade.c  tr_shader.c  tr_shadows.c  tr_surface.c
code/renderer2/glsl/: bokeh_fp.glsl  shadowfill_fp.glsl  shadowmask_fp.glsl  ssao_fp.glsl
code/renderercommon/: tr_font.c  tr_image_png.c  tr_image_tga.c  tr_types.h
code/renderervk/: tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_mesh.c  tr_scene.c  tr_shade.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_world.c  vk.c  vk.h  vk_vbo.c
code/renderervk/shaders/: bin2hex.c  gen_frag.tmpl
code/sdl/: sdl_glimp.c  sdl_input.c
code/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_snapshot.c
code/ui/: ui_public.h
code/unix/: linux_glimp.c  linux_qgl.c  linux_signals.c  linux_snd.c  unix_main.c  unix_shared.c
code/win32/: glw_win.h  win_glimp.c  win_main.c  win_qgl.c  win_resource.rc  win_shared.c  win_snd.c  win_syscon.c  win_wndproc.c
code/win32/msvc2005/: quake3e-ded.vcproj  quake3e.sln  quake3e.vcproj
code/win32/msvc2017/: quake3e-ded.vcxproj  quake3e-ded.vcxproj.filters  quake3e.sln  quake3e.vcxproj
docs/: q3url_add.cmd  quake3e-changes.txt  quake3e.htm  quake3e.md
docs/LinuxSupport/: CHANGES-1.32.txt  index.html
